--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,17 @@
 <html>
 <head>
 	<script src="http://code.jquery.com/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Gergő "Gery" Balogh</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
+<body>
+	<div id="particles-js"></div>
+	<script src="particles.min.js"></script>
+	<script type="text/javascript">
+		particlesJS.load('particles-js', 'particles.json', function() {
+			console.log('callback - particles.js config loaded');
+		});
+	</script>
+	<div id="main">
