--- a/main.scss
+++ b/main.scss
@@ -8,6 +8,10 @@ $befloxatone: #491414;
 $befunolol: #D6602D;
 $dusk: #EEDD99;
 
+$route66: #424242;
+$steadygrey: #E9E9E9;
+$bc: #BCBCBC;
+
 body {
 	margin: 0;
 }
@@ -21,7 +25,7 @@ canvas {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: $stetson;
+	background-color: $steadygrey;
 }
 
 h1 {
@@ -29,11 +33,11 @@ h1 {
 }
 
 div#main {
-	color: $dusk;
+	color: $route66;
 	position: absolute;
-	background: $stetson;
+	background: $steadygrey;
 	opacity: 1;
-	border: solid $befunolol 1pt;
+	border: solid $bc 2pt;
 	left: 15%;
 	right: 15%;
 	bottom: 20%;
