headers and links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<script src="http://code.jquery.com/jquery.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Gergő "Gery" Balogh</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
