menu and oprend content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,17 +3,17 @@
 <head>
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="/main.css">
 	<title>Gergő "Gery" Balogh</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<base target="_blank">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
 	<div id="particles-js"></div>
-	<script src="particles.min.js"></script>
+	<script src="/particles.min.js"></script>
 	<script type="text/javascript">
-		particlesJS.load('particles-js', 'particles.json', function() {
+		particlesJS.load('particles-js', '/particles.json', function() {
 			console.log('callback - particles.js config loaded');
 		});
 	</script>
-	<div id="main">
