--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,8 @@
 ---
 ---
 {% include header.html %}
-{{ content }}
+{% include menu.html %}
+<div id="main">
+	{{ content }}
+</div>
 {% include footer.html %}
