--- a/main.scss
+++ b/main.scss
@@ -115,6 +115,11 @@ span.emph {
 	font-style: italic;
 }
 
+span.quote {
+	font-family: 'PT Serif', serif;
+	font-style: italic;
+}
+
 a{
 	font-family: 'PT Sans', sans-serif;
 	color: $steadygrey;
