--- a/main.scss
+++ b/main.scss
@@ -111,6 +111,14 @@ img.ico {
 	padding: 0;
 }
 
+p.audience {
+	font-style: italic;
+}
+
+p.goal {
+	font-weight: bold;
+}
+
 span.emph {
 	font-family: 'PT Serif', serif;
 	font-style: italic;
