--- a/main.scss
+++ b/main.scss
@@ -13,6 +13,8 @@ $route66: #424242;
 $steadygrey: #E9E9E9;
 $bc: #BCBCBC;
 
+$MelonJuice: #F23800;
+
 body {
 	margin: 0;
 }
@@ -127,6 +129,14 @@ span.emph {
 span.quote {
 	font-family: 'PT Serif', serif;
 	font-style: italic;
+}
+
+span.alert {
+	font-family: 'PT Sans', sans-serif;
+	color: $route66;
+	background: $MelonJuice;
+	padding: 15pt;
+	text-decoration: none;
 }
 
 a{
