--- a/main.scss
+++ b/main.scss
@@ -75,7 +75,7 @@ p {
 
 p.code {
 	font-family: monospace, monospace;
-	border-left: solid, black, 5pt;
+	border-left: solid black 5pt;
 }
 
 @keyframes slideout {
