--- a/main.scss
+++ b/main.scss
@@ -145,6 +145,10 @@ span.alert {
 	text-decoration: none;
 }
 
+span.comment {
+	color: $dusk;
+}
+
 a{
 	font-family: 'PT Sans', sans-serif;
 	color: $steadygrey;
