--- a/main.scss
+++ b/main.scss
@@ -146,7 +146,9 @@ span.alert {
 }
 
 span.comment {
-	color: $dusk;
+	color: $gravel;
+	font-family: 'PT Serif', serif;
+	font-style: italic;
 }
 
 a{
