genre based recommendation and jaccard

--- a/main.scss
+++ b/main.scss
@@ -73,7 +73,7 @@ p {
 	padding: 0;
 }
 
-p.code {
+pre.code {
 	font-family: monospace, monospace;
 	border-left: solid $bc 3pt;
 	padding-left: 5pt
