--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/main.css">
 	<title>Gergő "Gery" Balogh</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<base target="_blank">
+	<base target="_self">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/default.min.css">
