--- a/main.scss
+++ b/main.scss
@@ -59,19 +59,21 @@ h2.night, h3.night {
 	border-right: solid $nightschool 3pt;
 	padding-right: 9pt;
 	margin-bottom: 3pt;
+	width: 50%;
 }
 
 h2.day, h3.day {
 	border-right: solid $dayschool 3pt;
 	padding-right: 9pt;
 	margin-bottom: 3pt;
-	background-image: linear-gradient(to right, rgba(0,0,0,0) , $dayschool);
+	width: 50%;
 }
 
 h2.both, h3.both {
 	border-right: solid black 3pt;
 	padding-right: 9pt;
 	margin-bottom: 3pt;
+	width: 50%;
 }
 
 div#main {
