--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,6 +2,6 @@
 	<ul>
 		<li><a href="/" target="_self">Home</a></li>
 		<li><a href="/content/teaching.html" target="_self">Teaching</a></li>
-		<li><a href="/research.html" target="_self">Research</a></li>
+		<li><a href="/content/research.html" target="_self">Research</a></li>
 	</ul>
 </div>
