feat: past courses loaded as graph but not displayed correctly yet.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,10 @@
 layout: archive
 ---
 
-<img class="ico" src="/assets/images/bio-photo.jpg" alt="me"/>
+<!--<img class="ico" src="/assets/images/bio-photo.jpg" alt="me"/>-->
 <h1>Gergő <span class="emph">Gery</span> Balogh, Ph.D.</h1>
 <!--a href="https://www.linkedin.com/in/geryxyz/">LinkedIn profile</a>-->
 <p><span class="quote">"I don't know anything, but I do know that everything is interesting if you go into it deeply enough."</span> &mdash; Richard Feynman</p>
+<p>
+    I am a research fellow at the University of Szeged, Department of Software Development. The interested reader can find more information about my fields of interest on the <a href="/research">research page</a>. I am also <a href="/teaching">teaching</a> at the university, which includes consulting several bachelor's and master's theses. Finally, I also contributed to several industrial and R&D projects.
+</p>
