--- a/_includes/thesis.liquid
+++ b/_includes/thesis.liquid
@@ -1,5 +1,8 @@
 <h3>{{ thesis.title }} <a id="{{ thesis.title | url_encode }}" class="anchor" href="#{{ thesis.title | url_encode }}"><i class="fa fa-link"></i></a></h3>
-<p class="author">{{ thesis.author }}{% if thesis.year_of_publish %}, {{ thesis.year_of_publish }}{% endif %}</p>
+<p class="author">
+    {{ thesis.author }}{% if thesis.year_of_publish %}, {{ thesis.year_of_publish }}{% endif %}
+    {% if thesis.co_consultant %}<br/>Társtémavezető: {{ thesis.co_consultant }}{% endif %}
+</p>
 <p>{{ thesis.abstract }}</p>
 {% if thesis.project.name %}
     <p>Ez a téma a következő projekthez kapcsolódik: <a href="#{{ thesis.project.name | url_encode }}">{{ thesis.project.name }}</a>.</p>
