feat: better list of projects with crossrefs to theses

--- a/_includes/thesis.liquid
+++ b/_includes/thesis.liquid
@@ -1,4 +1,4 @@
-<h3>{{ thesis.title }} <a id="{{ thesis.title | url_encode }}" class="anchor" href="#{{ thesis.title | url_encode }}"><i class="fa fa-link"></i></a></h3>
+<h3 id="{{ thesis.title | url_encode }}">{{ thesis.title }}</h3>
 <p class="author">
     {{ thesis.author }}{% if thesis.year_of_publish %}, {{ thesis.year_of_publish }}{% endif %}
     {% if thesis.co_consultant %}<br/>Társtémavezető: {{ thesis.co_consultant }}{% endif %}
