--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,9 +20,19 @@ span.emph {
   font-style: italic;
 }
 
-p.author {
+span.author, p.author {
   font-style: italic;
   color: dimgray;
+}
+
+span.title {
+  font-family: sans-serif;
+  font-style: normal;
+  font-variant: small-caps;
+}
+
+p.list {
+  text-align: left;
 }
 
 img.ico {
