--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -100,3 +100,7 @@ line.edge {
 svg {
   border: $stroke_width solid $Cruel_Water_at_Night__Dusty_Blue_Highlight;
 }
+
+th.mid-title {
+  text-align: center;
+}
