--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,3 +2,4 @@
 <!--<script defer src="https://pyscript.net/alpha/pyscript.js"></script>-->
 
 <script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://kit.fontawesome.com/010718a7db.js" crossorigin="anonymous"></script>
