feat: list of topics and projects for graduating students

--- a/_includes/thesis-student-table.liquid
+++ b/_includes/thesis-student-table.liquid
@@ -8,7 +8,7 @@
     </thead>
     <tbody>
     {% for thesis in include.theses %}
-        {% if thesis.project.name and thesis.state == include.state_filter %}
+        {% if thesis.title and thesis.state == include.state_filter %}
             <tr>
                 {% case thesis.state %}
                     {% when states.open %}
