--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,7 +31,7 @@ span.title {
   font-variant: small-caps;
 }
 
-span.center {
+.center {
   display: inline-block;
   width: 100%;
   text-align: center;
