--- a/_includes/thesis-student-table.liquid
+++ b/_includes/thesis-student-table.liquid
@@ -4,7 +4,7 @@
         <th>Állapot</th>
         <th>Név</th>
         <th>Dolgozat címe</th>
-        {% if thesis.year_of_publish %}<td>Védés éve</td>{% endif %}
+        {% if thesis.year_of_publish %}<th>Védés éve</th>{% endif %}
     </tr>
     </thead>
     <tbody>
